Convert bit instruction (BCHG, BCLR, BSET, BTST) test to Lisp and include in main test script.  Update documentation to include (sim-init) Lisp command.

--- a/Docs/sim.tex
+++ b/Docs/sim.tex
@@ -340,6 +340,14 @@ The value of the specified register, or an error if the register number is not i
 \subsubsection{Description}
 Returns the value of the specified register.
 
+\subsection{Sim-init}
+\subsubsection{Inputs}
+None.
+\subsubsection{Outputs}
+None.
+\subsubsection{Description}
+Calls the initialization routine to the current simulator.  The action is simulator dependent, but typically clears the registers.  The memory may, or may not be cleared.
+
 \subsection{Sim-step}
 \subsubsection{Inputs}
 None.
