--- a/Docs/sim.tex
+++ b/Docs/sim.tex
@@ -1,6 +1,34 @@
 \documentclass[10pt, openany]{book}
 %
+%  Packages to use
+%
+\usepackage{fancyhdr}
+\usepackage{fancyvrb}
+\usepackage{fancybox}
+%
+\usepackage{lastpage}
+\usepackage{imakeidx}
+%
+\usepackage{amsmath}
+\usepackage{amsfonts}
+%
+\usepackage{geometry}
+\geometry{letterpaper}
+%
 \usepackage{url}
+\usepackage{gensymb}
+\usepackage{multicol}
+%
+\usepackage[pdf]{pstricks}
+\usepackage{graphicx}
+\DeclareGraphicsExtensions{.pdf}
+\DeclareGraphicsRule{.pdf}{pdf}{.pdf}{}
+%
+% Rules to allow import of graphics files in EPS format
+%
+\usepackage{graphicx}
+\DeclareGraphicsExtensions{.eps}
+\DeclareGraphicsRule{.eps}{eps}{.eps}{}
 %
 %  Include the listings package
 %
@@ -19,16 +47,40 @@
 \newcommand{\constant}[1]{\emph{\texttt{#1}}}
 \newcommand{\keyword}[1]{\texttt{#1}}
 \newcommand{\datatype}[1]{\texttt{#1}}
+\newcommand{\docname}{Users's Manual for \\ CPU Simulators}
 
 %
 % Front Matter
 %
-\title{Documentation for CPU Simulators}
+\title{\docname}
 \author{Brent Seidel \\ Phoenix, AZ}
 \date{ \today }
 %========================================================
 %%% BEGIN DOCUMENT
 \begin{document}
+%
+%  Header's and Footers
+%
+\fancypagestyle{plain}{
+  \fancyhead[L]{}%
+  \fancyhead[R]{}%
+  \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}%
+  \fancyfoot[L]{Ada Programming}
+  \renewcommand{\headrulewidth}{0pt}%
+  \renewcommand{\footrulewidth}{0.4pt}%
+}
+\fancypagestyle{myfancy}{
+  \fancyhead[L]{\docname}%
+  \fancyhead[R]{\leftmark}
+  \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}%
+  \fancyfoot[L]{Ada Programming}
+  \renewcommand{\headrulewidth}{0.4pt}%
+  \renewcommand{\footrulewidth}{0.4pt}%
+}
+\pagestyle{myfancy}
+%
+% Produce the front matter
+%
 \maketitle
 \begin{center}
 This document is \copyright 2024 Brent Seidel.  All rights reserved.
@@ -44,85 +96,144 @@ This project includes simulators for some existing processors.  It can be embedd
 Interfaces are provided to allow the simulator to be controlled by and display data on a simulated control panel (see the Pi-Mainframe (\url{https://github.com/BrentSeidel/Pi-Mainframe}) project.  These may be stubbed out or ignored if not needed.
 
 %========================================================
-\chapter{Simulators}
+\chapter{How To Obtain}
+This package is currently available on GitHub at \url{https://github.com/BrentSeidel/Sim-CPU}
+
+\section{Dependencies}
+\subsection{Ada Libraries}
+The following Ada packages are used:
+\begin{itemize}
+  \item \package{Ada.Calendar}
+  \item \package{Ada.Characters.Latin\_1}
+  \item \package{Ada.Containers.Indefinite\_Ordered\_Maps}
+  \item \package{Ada.Direct\_IO}
+  \item \package{Ada.Exceptions}
+  \item \package{Ada.Integer\_Text\_IO}
+  \item \package{Ada.Streams}
+   \item \package{Ada.Strings.Fixed}
+  \item \package{Ada.Strings.Maps.Constants}
+  \item \package{Ada.Strings.Unbounded}
+  \item \package{Ada.Text\_IO}
+  \item \package{Ada.Text\_IO.Unbounded\_IO}
+  \item \package{Ada.Unchecked\_Conversion}
+\end{itemize}
+
+
+\subsection{Other Libraries}
+This library depends on the root package \package{BBS} available at \url{https://github.com/BrentSeidel/BBS-Ada} and the \package{BBS.Lisp} package available at \url{https://github.com/BrentSeidel/Ada-Lisp}.  Packages external to this library are marked with an asterisk.
+\begin{itemize}
+  \item \package{BBS}*
+  \item \package{BBS.lisp}*
+  \item \package{BBS.lisp.evaluate}*
+  \item \package{BBS.Sim\_CPU}
+  \item \package{BBS.Sim\_CPU.Clock}
+  \item \package{BBS.Sim\_CPU.disk}
+  \item \package{BBS.Sim\_CPU.Example}
+  \item \package{BBS.Sim\_CPU.i8080}
+  \item \package{BBS.Sim\_CPU.Lisp}
+  \item \package{BBS.Sim\_CPU.m68000}
+  \item \package{BBS.Sim\_CPU.m68000.line\_0}
+  \item \package{BBS.Sim\_CPU.m68000.line\_1}
+  \item \package{BBS.Sim\_CPU.m68000.line\_2}
+  \item \package{BBS.Sim\_CPU.m68000.line\_3}
+  \item \package{BBS.Sim\_CPU.m68000.line\_4}
+  \item \package{BBS.Sim\_CPU.m68000.line\_5}
+  \item \package{BBS.Sim\_CPU.m68000.line\_6}
+  \item \package{BBS.Sim\_CPU.m68000.line\_7}
+  \item \package{BBS.Sim\_CPU.m68000.line\_8}
+  \item \package{BBS.Sim\_CPU.m68000.line\_9}
+  \item \package{BBS.Sim\_CPU.m68000.line\_b}
+  \item \package{BBS.Sim\_CPU.m68000.line\_c}
+  \item \package{BBS.Sim\_CPU.m68000.line\_d}
+  \item \package{BBS.Sim\_CPU.m68000.line\_e}
+  \item \package{BBS.Sim\_CPU.m68000.exceptions}
+  \item \package{BBS.Sim\_CPU.serial}
+  \item \package{BBS.Sim\_CPU.serial.telnet}
+  \item \package{BBS.Sim\_CPU.serial.mux}
+  \item \package{GNAT.Sockets}*
+  \item \package{test\_util}
+\end{itemize}
+
+%========================================================
+\chapter{Usage Instructions}
+This is a library of routines intended to be used by some program.  To use these in your program, edit your *\keyword{.gpr} file to include a line to \keyword{with} the path to \keyword{BBS\_SimCPU.gpr}.  Then in your Ada code \keyword{with} in the package(s) you need and use the routines.
+
+This is also available as a standalone program with a command line interface (CLI).  This can be used for development or debugging.  To build the CLI, just build the \keyword{simcli.gpr} project file, after making sure that the dependencies are in the expected places.
+
+There is another program \keyword{loadcpm} available to create a bootable CP/M floppy disk image.  It is build using the \keyword{loadcpm.gpr} project.  It takes an Intel hex file image and writes it to a floppy disk image.
+
+%========================================================
+\chapter{API Description}
 \section{General}
 Several simulators are available for use.  Each simulator may also have variation.  So, one simulator may provide variations for different processors in a family of processors.
 
-Each simulator is based on an object that derives from the \verb|simulator| object defined in the \verb|BBS.Sim_CPU| package.  A generic simulator interface is defined with some procedures or functions that must be defined by a specific simulator and some that may be defined, if needed.  There are also a number of utility functions that are not expected to be overridden by a specific simulator.
+Each simulator is based on an object that derives from the \datatype{simulator} object defined in the \package{BBS.Sim\_CPU} package.  A generic simulator interface is defined with some procedures or functions that must be defined by a specific simulator and some that may be defined, if needed.  There are also a number of utility functions that are not expected to be overridden by a specific simulator.
 
 The current design has memory included in the simulator instead of being an external device.  Any I/O decoding is also handled inside the simulator.  This means that any reading and writing of memory has to be done via routines defined by the simulator.
 
 \subsection{Data Types}
-Currently, processors with address and data busses up to 32 bits wide are supported.  For the address bus, use the data type \verb|addr_bus|  and for the data bus, use \verb|data_bus|.  These are both defined as a 32 bit unsigned integer.  Each simulator may use as many or as few of these bits as are needed.  This means that if (as in most cases) a simulator doesn't define a full 4 GB of memory, the external program can try to read or write non-existent memory.  This will probably cause an exception.
+Currently, processors with address and data busses up to 32 bits wide are supported.  For the address bus, use the data type \datatype{addr\_bus}  and for the data bus, use \datatype{data\_bus}.  These are both defined as a 32 bit unsigned integer.  Each simulator may use as many or as few of these bits as are needed.  This means that if (as in most cases) a simulator doesn't define a full 4 GB of memory, the external program can try to read or write non-existent memory.  This will probably cause an exception.
 
 \subsection{Initialization}
+This should be called once at the beginning of the host program to initialize the simulator.  The implementation is up to the simulators and it is possible that some simulators may not need any initialization.
 \begin{lstlisting}
---
---  Called first to initialize the simulator
---
 procedure init(self : in out simulator) is abstract;
 \end{lstlisting}
-This should be called once at the beginning of the host program to initialize the simulator.  The implementation is up to the simulators and it is possible that some simulators may not need any initialization.
+\begin{itemize}
+  \item \keyword{self} - The simulator object to initialize.
+\end{itemize}
 
 \subsection{Loading Data to Memory}
 The main routines for reading and writing simulator memory are:
+
+Called to set a memory value.
 \begin{lstlisting}
---
---  Called to set a memory value
---
 procedure set_mem(self : in out simulator;
                   mem_addr : addr_bus;
                   data : data_bus) is abstract;
---
---  Called to read a memory value
---
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The simulator owning the memory to set.
+  \item \keyword{mem\_addr} - The memory address.  This is allowed to be a 32 bit value.  The simulator itself may do range limiting or wrapping (eg. only low order 16 bits are used) internally.
+  \item \keyword{data} - The data value to write into the memory address.  This is allowed to be a 32 bit value.  The simulator decides how to handle this value and what value actually gets written.
+\end{itemize}
+Called to read a memory value.
+\begin{lstlisting}
 function read_mem(self : in out simulator;
              mem_addr : addr_bus) return
   data_bus is abstract;
 \end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The simulator owning the memory to read.
+  \item \keyword{mem\_addr} - The memory address.  This is allowed to be a 32 bit value.  The simulator itself may do range limiting or wrapping (eg. only low order 16 bits are used) internally.
+  \item Returns the value of memory at the specified memory address.
+\end{itemize}
 The actual addressing and data bus used are defined by the specific simulator.
 
 For loading bulk data into memory use:
 \begin{lstlisting}
---
---  Called to load data into the simulator.
---
 procedure load(self : in out simulator; name : String)
    is null;
 \end{lstlisting}
 Its implementation is defined by the simulator.  Typically it loads an Intel Hex file or Motorola S-Record file representing a memory image.
 
 \subsection{Running a Simulation}
-The \verb|start| procedure is called first to specify a starting address for program execution.
+The \function{start} procedure is called first to specify a starting address for program execution.  This is called to start simulator execution at a specific address.  This is made null rather than abstract so that simulators that don't use it don't need to override it.
 \begin{lstlisting}
---
---  Called to start simulator execution at a specific
---  address.  This is made null rather than abstract
---  so that simulators that don't use it don't need to
---  override it.
---
-procedure start(self : in out simulator; addr : addr_bus)
-   is null;
+procedure start(self : in out simulator; addr : addr_bus) is null;
 \end{lstlisting}
-Then, each instruction is individually executed using the \verb|run| procedure.
+Then, each instruction is individually executed using the \function{run} procedure.  This is called once per frame when start/stop is in the start position and run/pause is in the run position.
 \begin{lstlisting}
---
---  Called once per frame when start/stop is in the start
---  position and run/pause is in the run position.
---
 procedure run(self : in out simulator) is abstract;
 \end{lstlisting}
-Certain conditions or instruction can cause a simulator to halt.  The \verb|halted| and \verb|continue_proc| routines can be used to test for this condition and clear it.
+Certain conditions or instruction can cause a simulator to halt.  The \function{halted} and \function{continue\_proc} routines can be used to test for this condition and clear it.
+
+Check if simulator is halted.  If a simulator doesn't define this, it will return \constant{False}.
 \begin{lstlisting}
---
---  Check if simulator is halted
---
-function halted(self : in out simulator) return Boolean
-   is (False);
---
---  This clears the halted flag allowing processing to
---  continue.
---
+function halted(self : in out simulator) return Boolean is (False);
+\end{lstlisting}
+This clears the halted flag allowing processing to continue.  If a simulator doesn't define this, it has no action.
+\begin{lstlisting}
 procedure continue_proc(self : in out simulator) is null;
 \end{lstlisting}
 From all of this, one can write the core of a simulator as follows:
@@ -146,27 +257,23 @@ end
 
 \subsection{Variants}
 Each simulator can support variants.  This enables one simulator to support multiple CPUs in a family.  Since the variants supported are unique to each simulator a universal data type cannot be used.  Variants are identified by a \verb|Natural| number.  The following routines are used to get the number of variants supported by a simulator, the name of each variant, the currently selected variant, and to select a variant:
+
+Called to get number of variants.  This defaults to returning one if the simulator doesn't define an alternative.
 \begin{lstlisting}
---
---  Called to get number of variants
---
-function variants(self : in out simulator)
-   return Natural is (1);
---
---  Called to get variant name
---
+function variants(self : in out simulator) return Natural is (1);
+\end{lstlisting}
+Called to get variant name.  This needs to be overridden by the simulator.
+\begin{lstlisting}
 function variant(self : in out simulator; v : Natural)
    return String is abstract;
---
---  Called to get current variant index
---
-function variant(self : in out simulator)
-   return Natural is abstract;
---
---  Called to set variant
---
-procedure variant(self : in out simulator; v : Natural)
-   is abstract;
+\end{lstlisting}
+Called to get current variant index.  This needs to be overridden by the simulator.
+\begin{lstlisting}
+function variant(self : in out simulator) return Natural is abstract;
+\end{lstlisting}
+Called to set variant.  This needs to be overridden by the simulator.
+\begin{lstlisting}
+procedure variant(self : in out simulator; v : Natural) is abstract;
 \end{lstlisting}
 
 \subsection{Other}
@@ -179,54 +286,43 @@ This simulator is unusual in that it has no memory defined, but instead has seve
 
 %--------------------------------------------------------------------------------------------------
 \section{8080 Family}
-The 8080 simulator has variants defined for the 8080, 8085, and Z-80 processors.  Only the 8080 and 8085 are currently implemented.  The Z-80 is for future development.  These are 8 bit processors with an 8 bit data bus and a 16 bit address bus.  In addition to a memory bus, these processors also include an I/O bus with 8 bit I/O port addressing.
+The 8080 simulator has variants defined for the 8080, 8085, and Z-80 processors.  Only the 8080 and 8085 are currently implemented.  The Z-80 is for future development.  These are 8 bit processors with an 8 bit data bus and a 16 bit address bus.  In addition to a memory bus, these processors also include an I/O bus with 8 bit I/O port addressing.  See \cite{i8080} for more information about the 8080/8085.
 
 Currently, the 8080 family does not have interrupts enabled or memory mapped I/O.  These may be added at some time in the future.
 
-When loading data using the \verb|load| routine, the specified file is assumed to be in Intel Hex format.
+When loading data using the \function{load} routine, the specified file is assumed to be in Intel Hex format.
 
 %--------------------------------------------------------------------------------------------------
 \section{68000 Family}
-The 68000 simulator has variants defined for the 68000, 68008, 68010, and CPU32.  Only the 68000 and 68008 are currently implemented.  The 68010 and CPU32 are for future development.  Internally, these are 32 bit processors with 32 bit data and 32 bit address busses.  The external address and data bus sizes depend on the variant selected.
+The 68000 simulator has variants defined for the 68000, 68008, 68010, and CPU32.  Only the 68000 and 68008 are currently implemented.  The 68010 and CPU32 are for future development.  Internally, these are 32 bit processors with 32 bit data and 32 bit address busses.  The external address and data bus sizes depend on the variant selected.  See \cite{m68000a} and \cite{m68000b} for more information about the 68000 family.
 
 The interrupt code is interpreted with the low order bits (7-0) representing the vector number and the next 8 bits (15-8) representing the priority.  Interrupts with vectors that match internally defined exception vectors are ignored.  Thus only interrupt vectors in the range 25-31 and 64-255 are processed.
 
-When loading data using the \verb|load| routine, the specified file is assumed to be in Motorola S-Record format.
+When loading data using the \function{load} routine, the specified file is assumed to be in Motorola S-Record format.
 
 %========================================================
 \chapter{I/O Devices}
 \label{chap:IODev}
-Each I/O device is based on an object that derives from the \verb|io_device| object defined in the \verb|BBS.Sim_CPU| package.  A generic I/O device interface is defined with some procedures or functions that must be defined by a specific I/O device and some that may be defined, if needed.  There are also a number of utility functions that are not expected to be overridden by a specific I/O device.
+Each I/O device is based on an object that derives from the \datatype{io\_device} object defined in the \package{BBS.Sim\_CPU} package.  A generic I/O device interface is defined with some procedures or functions that must be defined by a specific I/O device and some that may be defined, if needed.  There are also a number of utility functions that are not expected to be overridden by a specific I/O device.
 
-To be used by a simulator, an I/O device must first be attached to the simulator using the \verb|attach_io| routine.
+To be used by a simulator, an I/O device must first be attached to the simulator using the \function{attach\_io} routine.  This is called to attach an I/O device to a simulator at a specific address.  Bus is simulator dependent as some CPUs have separate I/O and memory space.
 \begin{lstlisting}
---
---  Called to attach an I/O device to a simulator at a
---  specific address.  Bus is simulator dependent as
---  some CPUs have separate I/O and memory space.
---
 procedure attach_io(self : in out simulator;
                     io_dev : io_access;
                     base_addr : addr_bus;
                     bus : bus_type) is abstract;
 \end{lstlisting}
 
-Many of the I/O devices will have an initialization routine specific for that device.  Since this may have device specific parameters, it can't be defined as part of the \verb|io_device| object.
+Many of the I/O devices will have an initialization routine specific for that device.  Since this may have device specific parameters, it can't be defined as part of the \datatype{io\_device} object.
 
-Along with attaching the I/O device to the simulator, the base address needs to be set in the I/O device object.  The value for \verb|base| in this routine should match the value for \verb|base_addr| in the \verb|attach_io| routine.  Bad things may happen if they don't match.
+Along with attaching the I/O device to the simulator, the base address needs to be set in the I/O device object.  The value for \keyword{base} in this routine should match the value for \keyword{base\_addr} in the \function{attach\_io} routine.  Bad things may happen if they don't match.
 \begin{lstlisting}
---
---  Set the I/O device base address
---
 procedure setBase(self : in out io_device;
                   base : addr_bus) is abstract;
 \end{lstlisting}
 
 The I/O device \verb|read| and \verb|write| functions are called by the simulator when an address within the devices address range is accessed.  Note that the address range starts at the \verb|base_addr| specified in the \verb|attach_io| call and extends through the number of addresses specified in the \verb|getSize| function.  If needed, the simulator can query the I/O device for its base address using the \verb|getBase| function.  If a device needs to do DMA or interrupt a simulator, the \verb|setOwner| procedure must be called first to give the device a reference to the simulator.  For interrupts, the \verb|setException| routine is used to define a \verb|long| value that the device passes to the simulator on exception.
 \begin{lstlisting}
---
---  Set which exception to use
---
 procedure setException(self : in out io_device;
                        except : long);
 \end{lstlisting}
@@ -398,6 +494,15 @@ The following Lisp program will execute instructions until the specified memory 
   (dowhile (= old-value (meml addr))
     (sim-step)))
 \end{lstlisting}
+
+%========================================================
+\clearpage
+\addcontentsline{toc}{chapter}{Bibleography}
+\nocite{m68000a}
+\nocite{m68000b}
+\nocite{i8080}
+\bibliographystyle{plain}
+\bibliography{sim.bib}
 
 \end{document}
 
