Reorganization in preparation for submitting alire crate(s).

--- a/Docs/sim.tex
+++ b/Docs/sim.tex
@@ -128,7 +128,7 @@ The following Ada packages are used:
 
 
 \subsection{Other Libraries}
-This library depends on the root package \package{BBS} available at \url{https://github.com/BrentSeidel/BBS-Ada} and the \package{BBS.Lisp} package available at \url{https://github.com/BrentSeidel/Ada-Lisp}.  Packages external to this library are marked with an asterisk.
+This library depends on the root package \package{BBS} available at \url{https://github.com/BrentSeidel/BBS-Ada} or using alire via ``\keyword{alr get bbs}'' and the \package{BBS.Lisp} package available at \url{https://github.com/BrentSeidel/Ada-Lisp} or using alire via ``\keyword{alr get bbs\_lisp}''.  Packages external to this library are marked with an asterisk.
 \begin{itemize}
   \item \package{BBS}*
   \item \package{BBS.lisp}*
